// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": false} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="back"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__6"
            >
              &lt; Back
            </span>
          </span>
        </span>
      </button>
    </div>
    <div />
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="next"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__9"
            >
              Next &gt;
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": true} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="back"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__3"
            >
              &lt; Back
            </span>
          </span>
        </span>
      </button>
    </div>
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": false} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div />
    <div />
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="next"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__0"
            >
              Next &gt;
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": true} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div />
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles failures count 0 failures 1`] = `<DocumentFragment />`;

exports[`IssueDetailsNavigationControls render handles failures count 1 failure 1`] = `<DocumentFragment />`;

exports[`IssueDetailsNavigationControls render handles failures count multiple failures 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="back"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__12"
            >
              &lt; Back
            </span>
          </span>
        </span>
      </button>
    </div>
    <div />
    <div>
      <button
        class="ms-Button ms-Button--default root-109"
        data-automation-id="next"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__15"
            >
              Next &gt;
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
